[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "U_shaped_laser"
version = "0.0.1"
authors = [
  { name="Jeppe H. Surrow", email="surrow@ece.au.dk"},
  { name ="Simon T. Thomsen", email="sthomsen@ece.au.dk"}
]
description = "A package used for dataprocessing and analysis of data obtained from the U-shaped laser"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[project.urls]
Homepage = "https://github.com/auphotonicLab/PICLab-narrow-linewidth/tree/main/feedback_u_shaped_laser/uslib"

